--- a/Index.html
+++ b/Index.html
@@ -22,20 +22,26 @@
 
     <address> <strong> <em>Dr. Eleanor Gaye</em> </strong>
         <p>Awesome Science faculty
-            University of Awesome</p>
-        <p>Bobtown, CA 99999,</p>
-        <p>USA</p>
+            University of Awesome
+            Bobtown, CA 99999
+            USA
+
+
+        </p>
 
         <strong> Tel</strong>
 
         : 123-456-7890
+
+
         <p><strong> Email:</strong>
 
             no_reply@example.com
+
         </p>
 
 
-        <p>20 January 2016</p>
+        <p><strong>20 January 2016</strong></p>
 
     </address>
 
@@ -98,12 +104,14 @@
             <dt>Polynesian chicken dance</dt>
             <dd>A little known but very influential dance dating back as far as 300BC, a whole village would dance around in a circle like chickens, to encourage their livestock to be "fruitful".</dd>
         </p>
-        <p><dt>Icelandic brownian shuffle</dt>
-        
+        <p>
+            <dt>Icelandic brownian shuffle</dt>
+
             <dd> Before the Icelanders developed fire as a means of getting warm, they used to practice this dance, which involved huddling close together in a circle on the floor, and shuffling their bodies around in imperceptibly tiny, very rapid movements. One of my fellow students used to say that he thought this dance inspired modern styles such as Twerking.</dd>
         </p>
-      <p>  <dt>Arctic robot dance</dt>
-        
+        <p>
+            <dt>Arctic robot dance</dt>
+
             <dd> An interesting example of historic misinformation, English explorers in the 1960s believed to have discovered a new dance style characterized by "robotic", stilted movements, being practiced by inhabitants of Northern Alaska and Canada. Later on however it was discovered that they were just moving like this because they were really cold.</dd>
         </p>
 
@@ -111,8 +119,8 @@
 
     <p>For more of my research, see my <a href="https://www.inet.se/">exotic dance research page.</a></p>
 
-      <p>Yours sincerely,
-          Dr Eleanor Gaye
+    <p>Yours sincerely,
+        Dr Eleanor Gaye
     </p>
     <p>University of Awesome motto: "Be awesome to each other." -- <em>The memoirs of Bill S Preston, Esq</em>
     </p>
